Bug1132662 fixed UI shift in firefox

--- a/webapp/app/css/treeherder.css
+++ b/webapp/app/css/treeherder.css
@@ -945,6 +945,7 @@ ul.failure-summary-list li .btn-xs {
 
 .classification-comment-container {
     margin-top: 5px;
+    min-height: 36px;
 }
 
 .classification-comment-preload-txt {
